--- a/DeepLearningStudy/ex_lab-03-1-minimizing_cost_show_graph.ipynb
+++ b/DeepLearningStudy/ex_lab-03-1-minimizing_cost_show_graph.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [ Lab-03-1 : Minimizing_cost_show_graph ]\n",
+    "# <span style=\"color:blue\">[</span> Lab-03-1 : Minimizing_cost_show_graph <span style=\"color:blue\">]</span>\n",
     "\n",
     "><p>출처: <a href=\"http://hunkim.github.io/ml/\" title=\"모두를 위한 머신러닝과 딥러닝의 강의\" target=\"blank\">모두를 위한 머신러닝과 딥러닝의 강의</a></p>"
    ]
@@ -27,11 +27,12 @@
     "import os\n",
     "import tensorflow as tf\n",
     "import time\n",
+    "import numpy as np\n",
     "\n",
     "os.environ['TF_CPP_MIN_LOG_LEVEL'] = '2'\n",
     "\n",
     "# tensorflow version:\n",
-    "print('tensorflow version:{0}'.format(tf.__version__))\n"
+    "print('tensorflow version:{0}'.format(tf.__version__))"
    ]
   },
   {
@@ -49,28 +50,35 @@
    },
    "outputs": [],
    "source": [
-    "tf.set_random_seed(777)  # for reproducibility\n"
+    "tf.set_random_seed(777)  # for reproducibility"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Init. variables"
+    "# Setup"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "kim\n"
+     ]
+    }
+   ],
    "source": [
     "X = [1, 2, 3]\n",
     "Y = [1, 2, 3]\n",
     "\n",
-    "W = tf.placeholder(tf.float32)\n"
+    "print('kim')\n",
+    "W = tf.placeholder(tf.float32)"
    ]
   },
   {
@@ -89,7 +97,7 @@
    "outputs": [],
    "source": [
     "# Our hypothesis for linear model X * W\n",
-    "hypothesis = X * W\n"
+    "hypothesis = X * W"
    ]
   },
   {
@@ -108,8 +116,7 @@
    "outputs": [],
    "source": [
     "# cost/loss function\n",
-    "cost = tf.reduce_mean(tf.square(hypothesis - Y))\n",
-    "\n"
+    "cost = tf.reduce_mean(tf.square(hypothesis - Y))"
    ]
   },
   {
@@ -128,7 +135,7 @@
    "outputs": [],
    "source": [
     "# Launch the graph in a session.\n",
-    "sess = tf.Session()\n"
+    "sess = tf.Session()"
    ]
   },
   {
@@ -147,7 +154,7 @@
    "outputs": [],
    "source": [
     "# Initializes global variables in the graph.\n",
-    "sess.run(tf.global_variables_initializer())\n"
+    "sess.run(tf.global_variables_initializer())"
    ]
   },
   {
@@ -166,7 +173,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7544381618499756\n"
+      "0.5162250995635986\n"
      ]
     }
    ],
@@ -184,15 +191,14 @@
     "    cost_history.append(curr_cost)\n",
     "\n",
     "duration = time.time() - start_time\n",
-    "print(duration)\n",
-    "\n"
+    "print(duration)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Show the cost function"
+    "# Visualize the cost function"
    ]
   },
   {
@@ -204,7 +210,7 @@
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAXoAAAD8CAYAAAB5Pm/hAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAIABJREFUeJzt3Xd4VVW+xvHvLz0kIQXSO4TeAgQQQRArlhG7ImLBUVH0\nOs6dcSwz9+o0Hcs4YxewYEFUBLuIelFReocAgSSEkBBCSEgnfd0/cpjJaCAhJ8k+5fd5njwk+5yT\n8x7u3NfF3muvJcYYlFJKuS4PqwMopZTqWlr0Sinl4rTolVLKxWnRK6WUi9OiV0opF6dFr5RSLk6L\nXimlXFybRS8ir4rIYRHZ0eLYuyKyxfaVIyJbbMeTRORYi8de6srwSiml2ubVjue8DjwHvHH8gDHm\nmuPfi8hTQFmL52cZY1I7K6BSSin7tFn0xpjvRSSptcdERICrgbPsCdG7d2+TlNTqWyillDqBjRs3\nHjHGhLf1vPaM6E/mDKDQGLO3xbFk26mcMuD3xpiVbf2SpKQkNmzYYGcUpZRyLyKyvz3Ps7fopwPv\ntPi5AEgwxhSLyGjgQxEZYowpbyXgbcBtAAkJCXbGUEopdSIdnnUjIl7A5cC7x48ZY2qNMcW27zcC\nWUD/1l5vjJlrjEkzxqSFh7f5Lw+llFIdZM/0ynOA3caYvOMHRCRcRDxt3/cB+gHZ9kVUSillj/ZM\nr3wHWA0MEJE8EbnF9tC1/OdpG4BJwDbbOfrFwGxjTElnBlZKKXVq2jPrZvoJjt/UyrEPgA/sj6WU\nUqqz6J2xSinl4rTolVLKxTl10ReUHeMvn+2kuLLW6ihKKeWwnLroK2oamLdyH0s351sdRSmlHJZT\nF33/yCBGJYTwzrpcdJNzpZRqnVMXPcC1YxLIKqpi4/6jVkdRSimH5PRFf9HwaAJ8PFm0/oDVUZRS\nyiE5fdEH+HpxSWoMn20roLym3uo4SinlcJy+6KH59M2x+kY+2XrQ6ihKKdVu3TU4dYmiHx4XzMCo\nIBat09M3SinnMXP+Wn61aHOXv49LFL2IMH1sAtvzy9iRX9b2C5RSymI78svYmldGanxIl7+XSxQ9\nwKUjY/H18uCddblWR1FKqTYtWp+Lr5cHl42M6/L3cpmiD/b35uLhMXy05SBVtQ1Wx1FKqROqrmvg\nw80HuWh4NME9vLv8/Vym6AGuGxdPZW0Dn27Ti7JKKcf16dYCKmsbuG5s9+yu51JFPyohlP6RgSzU\ni7JKKQe2cF0u/SICGZ0Y2i3v51JFf/yi7NYDpaQf1IuySinHs/NgOVsOlDJ9bAIi0i3v6VJFD3CZ\n7aLswrV6UVYp5XgWrtuPj5cHl4+K7bb3dLmiD+nhw0XDo/lwcz6VelFWKeVAqmqbL8JePCyakB4+\n3fa+Llf0ADPGJVJV18jHW/SirFLKcXy89SCVtQ3MOK17LsIe55JFPyohhIFRQby9dr8uX6yUchgL\n1+YyMCqIUQndcxH2OJcsehFhxmmJpB8sZ1ueXpRVSllvW14p2/PLmDGu+y7CHtdm0YvIqyJyWER2\ntDj2sIjki8gW29eFLR57QEQyRSRDRM7vquBtuTQ1hh4+nry9dr9VEZRS6l/eXpOLv7cn00Z230XY\n49ozon8dmNrK8aeNMam2r88BRGQwcC0wxPaaF0TEs7PCnoogP2+mpcbw8daDlB3T5YuVUtYpr6nn\n460HuWREDD39uv5O2J9qs+iNMd8DJe38fdOARcaYWmPMPiATGGtHPrvMGJdITX0TSzblWRVBKaVY\nsjGPY/WNzByfaMn723OO/m4R2WY7tXP8ykIs0PK21DzbsZ8RkdtEZIOIbCgqKrIjxokNjQ1mZEII\nb63Ri7JKKWsYY3hrbS6p8SEMjQ22JENHi/5FoA+QChQAT53qLzDGzDXGpBlj0sLDwzsYo23Xj0sk\nq6iK1dnFXfYeSil1ImuyS8g8XMn1p1kzmocOFr0xptAY02iMaQLm8e/TM/lAfIunxtmOWeai4dGE\n9PDmrTV6UVYp1f3eWrOfkB7eXDw82rIMHSp6EWmZ+DLg+Iycj4FrRcRXRJKBfsA6+yLax8/bk6vT\n4lmeXkhheY2VUZRSbuZweQ1fph/iqtFx+HlbMi8FaN/0yneA1cAAEckTkVuAx0Vku4hsA6YA9wIY\nY9KB94CdwDJgjjGmscvSt9OMcQk0NBndlEQp1a0WrT9AQ5NhxjjrTtsAeLX1BGPM9FYOv3KS5/8F\n+Is9oTpbYq8AJvcP5511ucyZkoK3p0veJ6aUciD1jU0sXJvLpP7hJPUOsDSL2zTeDeMTKSyvZXl6\nodVRlFJu4KudhRwqr+EGCy/CHuc2RX/mgAjiw/xZsDrH6ihKKTewYFUOcaH+TBkYYXUU9yl6Tw/h\n+nGJrNtXwu5D5VbHUUq5sIxDFazdV8L1pyXi6dG969q0xm2KHuDqtHh8vTx4Y7VOtVRKdZ03Vufg\n4+XB1WnxbT63O7hV0YcG+HDJiBiWbsrX9W+UUl2ivKaepZvzuWREDGEB3be5yMm4VdED3Hh6Esfq\nG3l/g24grpTqfO9vyKO6rpEbxydZHeVf3K7oh8YGMzoxlDfX7KepSde/UUp1nqYmw5urcxiVEMKw\nOGvWtWmN2xU9wE2nJ7G/uJpv9xy2OopSyoV8t6eInOJqbpqQbHWU/+CWRT91aBSRPX157cccq6Mo\npVzIa6tyiAjy5YKhUVZH+Q9uWfTenh7MGJfIyr1HyCqqtDqOUsoFZBVV8v2eImaMS3S4u+8dK003\nmj42AR9PDxasyrE6ilLKBbyxKgdvT+G6cQlWR/kZty368CBfLh4RzeKNeTrVUilll/KaehZvzOMX\nw2MID/K1Os7PuG3RA8yakEx1nU61VErZ5731B6iqa+RmB7sIe5xbF/3Q2GDGJoXx+qocGnWqpVKq\nAxqbDK+vymFMUqhDTalsya2LHmDWxCTyjh7jq526qqVS6tR9vauQvKPHmOWgo3nQoufcwVHEhfrz\n2o/7rI6ilHJCr/24j9gQf84dHGl1lBNy+6L39BBuHJ/E2n0l7MgvszqOUsqJ7DxYzprsEm48PREv\nB5tS2ZLjJutGV4+JJ8DHk1d1VK+UOgWv/LCPHj6eXDPG8aZUtqRFDwT7e3NVWjyfbD3IYd1AXCnV\nDofLa/h4az5Xp8UT7O9tdZyT0qK3mTUhmYYmo2vVK6Xa5c01+2loMtw8IcnqKG1qs+hF5FUROSwi\nO1oce0JEdovINhFZKiIhtuNJInJMRLbYvl7qyvCdKaFXD84bHMlba/dzrK7R6jhKKQdWU9/IW2v2\nc+6gSBJ7Wbvxd3u0Z0T/OjD1J8e+AoYaY4YDe4AHWjyWZYxJtX3N7pyY3eOWiX0ora5nyeY8q6Mo\npRzYkk35HK2u55aJjjulsqU2i94Y8z1Q8pNjy40xDbYf1wBxXZCt241JCmV4XDCvrNyna9UrpVrV\n1GSY/0M2Q2N7MjY5zOo47dIZ5+hnAV+0+DnZdtrmOxE5oxN+f7cREX55Rh+yj1TxzW5dq14p9XP/\nt/sw2UVV3HpGH0Ss3/i7PewqehF5CGgA3rYdKgASjDGpwK+BhSLS8wSvvU1ENojIhqKiIntidKoL\nh0YRG+LPvO+zrY6ilHJAc1dmExviz4XDoq2O0m4dLnoRuQm4GJhhjDEAxphaY0yx7fuNQBbQv7XX\nG2PmGmPSjDFp4eHhHY3R6bw8PZg1MZl1OSVsOVBqdRyllAPZeqCUdftKuHlCksOtOX8yHUoqIlOB\n+4BLjDHVLY6Hi4in7fs+QD/A6YbG14yJJ8jPi3krnS66UqoLzVuZTZCvF9eMibc6yilpz/TKd4DV\nwAARyRORW4DngCDgq59Mo5wEbBORLcBiYLYxpqTVX+zAAn29uG5cAl9sLyC3uLrtFyilXN6Bkmo+\n317AdeMSCPJz7BukfsqrrScYY6a3cviVEzz3A+ADe0M5gptPT+bVH/bxyg/ZPDJtqNVxlFIWe+WH\nfXiIcJMT3CD1U85zkqmbRQX7MS01lnc3HKCkqs7qOEopC5VU1bFofS7TUmOJDva3Os4p06I/idsn\n9aGmvok3VudYHUUpZaE3V++npr6J2yf3sTpKh2jRn0S/yCDOGRTBglU5uiyCUm7qWF0jC1bncPbA\nCPpHBlkdp0O06Ntw++S+HK2u5/2Nuq+sUu5o8cbm07e3T+5rdZQO06JvQ1piKKMSQpj7fTYNjU1W\nx1FKdaOGxibmrdxHanwIY5JCrY7TYVr0bRARZk/uS97RY3y2vcDqOEqpbvTZ9gJyS6q548y+TrPc\nQWu06NvhnEGR9IsI5MVvs7DdBKyUcnHGGF78NouUiEDOHeS4+8G2hxZ9O3h4NI/qdx+qYEWGLnam\nlDv4NqOI3YcqmD25Lx4ezjuaBy36drskNYbYEH9e/DbL6ihKqW7w4rdZxAT7ccmIGKuj2E2Lvp28\nPT249Yxk1uccZX2O063qoJQ6BRtySliXU8Ktk/rg4+X8Nen8n6AbXTMmgbAAH55fkWl1FKVUF3p+\nRSahPbydbvGyE9GiPwX+Pp7cMjGZbzOK2JFfZnUcpVQX2JFfxoqMIm6ZmEwPnzaXA3MKWvSnaOb4\nRIL8vHRUr5SLeuHbTIJ8vZg5PsnqKJ1Gi/4U9fTz5sbxSSxLP0Tm4Qqr4yilOlHm4Qq+2HGIG05P\nJNjfuZYiPhkt+g6YNTEZPy9PXlihM3CUciUvfJuFn5cnsyYkWx2lU2nRd0BYgA/XjUvgo60HdWMS\npVxEbnE1H205yPSxCfQK9LU6TqfSou+g2yf1wdNDeOFbPVevlCt48btMPD3EaZciPhkt+g6K6OnH\n9DHxLN6YR95RHdUr5czyS4+xeGMe146JJ7Knn9VxOp0WvR1un9wXEXjpOz1Xr5Qze8l2x/tsJ16K\n+GS06O0QE+LPlaPjeW99HofKaqyOo5TqgENlNby7/gBXjo4jJsT5tglsDy16O915Zl+ajNFRvVJO\n6qXvsmg0hjvPTLE6Spdps+hF5FUROSwiO1ocCxORr0Rkr+3P0BaPPSAimSKSISLnd1VwRxEf1oMr\nRsWxcF2ujuqVcjKF5TUsXJfLFaNiiQ/rYXWcLtOeEf3rwNSfHLsf+MYY0w/4xvYzIjIYuBYYYnvN\nCyLi2WlpHdScKSk0NemoXiln8+K3WTQ1Ge6a0s/qKF2qzaI3xnwP/HS5xmnAAtv3C4BLWxxfZIyp\nNcbsAzKBsZ2U1WEl9NJRvVLO5t+j+TgSernuaB46fo4+0hhzfF+9Q8Dx7VdigZa7aOfZjv2MiNwm\nIhtEZENRUVEHYziOu87SUb1SzuRfo/mzXPfc/HF2X4w1zXvrnfL+esaYucaYNGNMWnh4uL0xLBcf\n1oMrRzeP6gvKjlkdRyl1EofKmkfzV46Oc+lz88d1tOgLRSQawPbn8f318oGWCzjH2Y65hTlTUjDG\n6MqWSjm451dkYoxhzhTXH81Dx4v+Y+BG2/c3Ah+1OH6tiPiKSDLQD1hnX0TnER/Wg6vT4nl3/QEO\nlOjdsko5oryj1Sxan8vVafFuMZqH9k2vfAdYDQwQkTwRuQV4DDhXRPYC59h+xhiTDrwH7ASWAXOM\nMY1dFd4R3XVWCiLCs/+31+ooSqlWPPtNJiLiFufmj2tz+xRjzPQTPHT2CZ7/F+Av9oRyZtHB/lw3\nNoE31+znzjNTSOodYHUkpZRNzpEqFm/KY+ZpiUQHu+ZdsK3RO2O7wJ1T+uLtKfzj6z1WR1FKtfDM\nN3vx8hDuPNM117Q5ES36LhAR5MeNpyfx0daDZBzSXaiUcgR7CitYuiWfG09PIsIFV6g8GS36LjJ7\nUl8Cfbx4anmG1VGUUsBTyzMI8PHiDhddofJktOi7SGiAD7dO6sPynYVsOVBqdRyl3NrWA6V8mV7I\nrWf0ITTAx+o43U6LvgvNmphMWIAPT36po3qlrPTk8gzCAny45QzX2gu2vbTou1Cgrxd3ntmXHzKP\nsCrziNVxlHJLq7KOsHLvEe6Y3JdA3zYnGrokLfoudv1picQE+/G3ZbtpXi1CKdVdjDH8bVkG0cF+\nzByfaHUcy2jRdzE/b09+dW5/tuaV8cWOQ1bHUcqtLNtxiK0HSrn3nP74ebv8iuknpEXfDa4YFUe/\niECe/DKDhsYmq+Mo5RYaGpt4YnkGKRGBXD6q1UV03YYWfTfw9BB+e/4Aso9U8d6GPKvjKOUW3t+Y\nR3ZRFb89fwBenu5dde796bvRuYMjGZ0Yyj++3kN1XYPVcZRyadV1Dfzj6z2MSgjhvMGRbb/AxWnR\ndxMR4YELBnK4opb5K/dZHUcpl/bKyn0UltfywIWDEBGr41hOi74bpSWFcf6QSF7+Louiilqr4yjl\nko5U1vLSd1mcNziSMUlhVsdxCFr03ex3UwdS09DEM9/oMsZKdYVnvtlLTUMTv7tgoNVRHIYWfTfr\nEx7IdWMTWLgul6yiSqvjKOVSsosqWbg2l+lj4+kbHmh1HIehRW+Be87ph7+3J49+vtvqKEq5lEe/\n2I2vlwf3nN3f6igORYveAr0DfbnjzL58vauQVVm6NIJSnWF1VjFf7SzkzikphAf5Wh3HoWjRW+SW\nicnEhvjz50930dikSyMoZY+mJsOfP9tJTLAft0x0z4XLTkaL3iJ+3p7cN3UAOwvKWbJJb6JSyh5L\nNueTfrCc310w0K2XOjgRLXoLXTIihtT4EJ74MoOqWr2JSqmOqKpt4IkvdzMiLphfDI+xOo5D6nDR\ni8gAEdnS4qtcRH4lIg+LSH6L4xd2ZmBXIiL84eLBHK6o5cVvs6yOo5RTeum7LArLa/mfXwzGw0Nv\njmpNh4veGJNhjEk1xqQCo4FqYKnt4aePP2aM+bwzgrqq0YmhTEuNYe7KbA6UVFsdRymnkne0mrnf\nZ3PJiBhGJ+rNUSfSWaduzgayjDH7O+n3uZXfTR2Ih8BjX+h0S6VOxaNf7EYE7tebo06qs4r+WuCd\nFj/fLSLbRORVEQntpPdwWTEh/sye3JfPthewNrvY6jhKOYV1+0r4bFsBt0/qS0yIv9VxHJrdRS8i\nPsAlwPu2Qy8CfYBUoAB46gSvu01ENojIhqKiIntjOL3bJ/UlJtiPhz/ZqdMtlWpDY5Ph4Y/TiQ72\nY/bkvlbHcXidMaK/ANhkjCkEMMYUGmMajTFNwDxgbGsvMsbMNcakGWPSwsPDOyGGc/P38eShiwaz\nq6CchWv1DJhSJ7NwXS47C8p56KJB+PvodMq2dEbRT6fFaRsRiW7x2GXAjk54D7dw4bAoxvfpxZPL\n91BSVWd1HKUc0tGqOp5ansH4Pr24aFh02y9Q9hW9iAQA5wJLWhx+XES2i8g2YApwrz3v4U5EhEem\nDaGytoEnl2dYHUcph/Tk8gwqahp4+JIhutZ8O3nZ82JjTBXQ6yfHZtqVyM31jwzihvGJvL4qh2vH\nxDM8LsTqSEo5jO15ZSxcl8uN45MYEBVkdRynoXfGOqB7z+1P70Bf/vDhDr0wq5RNU5Ph9x/toFeA\nL78+T1enPBVa9A6op583D104iK15ZSxan2t1HKUcwqL1B9h6oJSHLhpITz9vq+M4FS16BzUtNYbT\n+oTx+LIMiit120Hl3kqq6nj8y92MSw7j0tRYq+M4HS16ByUi/HHaUKpqG/SOWeX2HvtiFxU1Dfzp\n0qF6AbYDtOgdWP/IIG45I5n3N+bpHbPKba3bV8J7G/L45cRk+kfqBdiO0KJ3cPec3Y/YEH8e+nAH\ndQ1NVsdRqlvVNTTx4NLtxIb4c885/ayO47S06B1cDx8v/nTpEDIPVzJvZbbVcZTqVvNWZpN5uJI/\nThtCDx+7ZoO7NS16J3DWwEguHBbFM9/sJedIldVxlOoW+4ureOabvVwwNIqzB0VaHcepadE7if/9\nxRB8PD14cOl2jNG59cq1GWN4cOl2fDw9+N9fDLE6jtPToncSkT39uP/CgazKKub9jbrHrHJtizfm\n8WNmMb+7YCBRwX5Wx3F6WvROZPqYBMYmhfGXz3ZRVKFz65VrKqqo5c+f7WJMUijXjU2wOo5L0KJ3\nIh4ewl8vH8axukYe/iTd6jhKdYlHPknnWF0jj14+TPeA7SRa9E4mJSKQ/zo7hc+2FbBsxyGr4yjV\nqb5MP8Sn2wq466wUUiJ0znxn0aJ3QrdP7svg6J784aMdlFbruvXKNZRV1/P7D3cwKLond5ypu0Z1\nJi16J+Tt6cHjVw6npKqOP326y+o4SnWKP322k5KqOp64cjjenlpNnUn/Np3U0Nhg7pjclw825bFi\n92Gr4yhllxUZh1m8MY/Zk/swNDbY6jguR4veid19dgoDIoO4f8k2yqrrrY6jVIeUVddz/wfb6B8Z\nyN1n6TIHXUGL3on5enny1NUjKK6s01k4ymk98kk6RyrreOqqVPy8daPvrqBF7+SGxgYzZ0oKSzfn\n82W6zsJRzmV5+iGWbM5nzpQUhsXpKZuuokXvAu46K4UhMT15cMl2jugmJcpJHKms5cGl2xkc3ZO7\npqRYHcel2VX0IpIjIttFZIuIbLAdCxORr0Rkr+3P0M6Jqk7E29ODv1+dSkVtA/d/oGvhKMdnjOGB\nJdspP9bA09ek4uOlY86u1Bl/u1OMManGmDTbz/cD3xhj+gHf2H5WXWxAVBD3nT+Ar3cV8t6GA1bH\nUeqk3t+Qx1c7C7lv6gAGROmNUV2tK/4zOg1YYPt+AXBpF7yHasWsCcmM79OLRz7Zyf5iXc5YOabc\n4moe+SSd8X16MWtCstVx3IK9RW+Ar0Vko4jcZjsWaYwpsH1/CNCFpLuJh4fw5NUj8PQQ7lm0hfpG\n3ZFKOZb6xibueXczHh7CE1cN17Vsuom9RT/RGJMKXADMEZFJLR80zSeLWz1hLCK3icgGEdlQVFRk\nZwx1XGyIP49ePowtB0p55pu9VsdR6j88+81eNueW8pfLhhEX2sPqOG7DrqI3xuTb/jwMLAXGAoUi\nEg1g+7PV2zaNMXONMWnGmLTw8HB7YqifuHh4DFeOjuP5FZm6qbhyGOv2lfDcikyuGBXHJSNirI7j\nVjpc9CISICJBx78HzgN2AB8DN9qediPwkb0h1al7+JIhJIT14N53t+jCZ8pypdV13PvuFuLDevDI\nNN0xqrvZM6KPBH4Qka3AOuAzY8wy4DHgXBHZC5xj+1l1s0BfL56ZPpKiylp+u3ibTrlUljHGcN/i\nbRyuqOGf144k0Fc3+e5uHf4bN8ZkAyNaOV4MnG1PKNU5hseFcP8Fg/jTpzt5fVUON+sMB2WBBaty\nWL6zkN9fNIjU+BCr47glvUvBxc2akMQ5gyJ49PPdbM8rszqOcjM78sv46+e7OXtgBLdM1IGGVbTo\nXZyI8MSVI+gd6MOdCzfqKpeq25Qdq+fOtzfRK9CHJ64agYhOpbSKFr0bCA3w4dnrRlFQWsNvFm/V\n8/Wqyxlj+O37WzlYeoznrhtFWICP1ZHcmha9mxidGMqDFw7iq52FzFuZbXUc5eLmr9zH8p2FPHDh\nIEYn6nJXVtOidyM3T0jiwmFR/G1ZBquzdH696hprsot5bNlupg6JYtaEJKvjKLTo3YqI8LcrhpPY\nqwd3v7OJgrJjVkdSLqag7Bh3LdxEYlgPnrhquJ6XdxBa9G4myM+buTNHc6yukTve2kRtQ6PVkZSL\nqG1o/t/UsbpGXp45miA/b6sjKRstejeUEhHEU1ePYMuBUv73o3S9OKvsZozh4Y/T2XKglCevGkG/\nSF162JFo0bupqUOjuWtKCovWH+CN1futjqOc3Jtr9vPOugPceWZfLhgWbXUc9RNa9G7s1+f255xB\nEfzx052syjxidRzlpFZlHuGRT3ZyzqAIfnPeAKvjqFZo0bsxDw/h6WtS6dM7gDsXbiLniG5Wok7N\n/uIq7ly4iT69A3j6mlRdX95BadG7uSA/b+bfmIYAsxas1ztnVbuVHatn1uvrAZh3Q5pefHVgWvSK\nxF4BvHT9aA6UVHPH2xt1ZyrVpvrGJu58eyO5JdW8fP1oknoHWB1JnYQWvQJgXJ9ePHr5cFZlFfP7\npTt0Jo46IWMM//PRDn7MLOavlw1jXJ9eVkdSbdCFodW/XDk6jpwjVTy3IpO4UH/uPruf1ZGUA3p+\nRea/ZthclRZvdRzVDlr06j/893n9OVh6jKe+2kNMiD9XjI6zOpJyIEs25fHk8j1cmhrDb8/XGTbO\nQote/QcR4bErhlNYUcPvPthGeJAvk/rrnr4KVu4t4r7F2zi9by8ev1KXHXYmeo5e/YyPlwcvXj+a\nfpFBzH5rI1sOlFodSVls64FSbn9zIykRgbx4/Wh8vLQ6nIn+X0u1qqefNwtuHkOvQB9ufm0dmYcr\nrY6kLJJVVMlNr62jV6APb8waS7C/TqN0Nlr06oQievrx5qxxeHoIN7yylryj1VZHUt0s72g1M+ev\nxdNDeGPWOCJ6+lkdSXWAFr06qaTeASyYNZbK2gZmzF/L4fIaqyOpbnK4vIbr56+loraB128eS7LO\nlXdaHS56EYkXkRUislNE0kXkHtvxh0UkX0S22L4u7Ly4ygpDYoJ5fdZYiipquf6VtZRU1VkdSXWx\no1V1XP/KWg5X1PL6zWMZGhtsdSRlB3tG9A3AfxtjBgOnAXNEZLDtsaeNMam2r8/tTqksNyohlFdu\nHMP+4mpmzF/LUS17l3W0qo4Z89eSU1zN/BvSdCtAF9DhojfGFBhjNtm+rwB2AbGdFUw5nvF9ezHv\nhjSyiiqZMX8tpdVa9q6mtLp5JJ9ZVMm8G9I4PaW31ZFUJ+iUc/QikgSMBNbaDt0tIttE5FUR0eGA\nC5nUP5y5M0eTebhSR/Yu5vjpmr2FlcydOZrJev+Ey7C76EUkEPgA+JUxphx4EegDpAIFwFMneN1t\nIrJBRDYUFRXZG0N1ozMHRPDyDaPZe7iS6fPWUFRRa3UkZacjlbVMn7eGPYWVvHzDaM4cEGF1JNWJ\n7Cp6EfGmueTfNsYsATDGFBpjGo0xTcA8YGxrrzXGzDXGpBlj0sLDdeTgbKYMiOC1m5rP2V87dzWH\nynQ2jrMqLK/hmpdXk1NcxWs3jWGKlrzLsWfWjQCvALuMMX9vcbzlPmKXATs6Hk85sgkpvVkwayyF\n5bVc+dIfTuMAAAAKzElEQVQq9unGJU4n50gVV7y4ikNlNSy4eSwT9Jy8S7JnRD8BmAmc9ZOplI+L\nyHYR2QZMAe7tjKDKMY1NDmPhreOormvkqpdWkX6wzOpIqp3SD5Zx5UurqKptYOGtp+lywy5MHGHd\n8bS0NLNhwwarYyg7ZB6u5IZX1lJR08BLM0fryNDBrco8wu1vbiTQz4s3bxlHSkSg1ZFUB4jIRmNM\nWlvP0ztjVadIiQhk8R2nEx3ix02vrWPJpjyrI6kTWLo5jxtfW0d0iB8f3HG6lrwb0KJXnSYmxJ/3\nZ59OWmIYv35vK898s1d3qnIgxhie/WYv9767ldGJobw/+3RiQvytjqW6gRa96lTB/t68PmsMl42M\n5e9f7eFX726hpr7R6lhur6a+kXvf3cJTXzVvGrJAV6F0K7rxiOp0vl6e/P3qEaREBPLElxnsL67m\n5ZmjidSVDy1xuLyG29/ayObcUn5zXn/mTEnRTUPcjI7oVZcQEeZMSeGl60eRcaiCi5/9gQ05JVbH\ncjsb95dw8bM/sLugghdmjOKus/ppybshLXrVpaYOjebDORPo4ePJ9HlreGN1jp637wbGGN5cncO1\nc9fg7+PJ0jmnc+Gw6DZfp1yTFr3qcgOigvj4romc0S+c//konbve2UxFTb3VsVxWRU09d7+zmT98\nlM7ElN58PGciA6N6Wh1LWUjP0atuEezvzfwb0nj5+2yeXJ5Ben4Zz0wfyfC4EKujuZTteWX816LN\n5JZUc9/UAcye1BcPDz1V4+50RK+6jYeHcMeZfVl022nUNjRx+QureH5FJo1NeirHXo1Nhhe+zeSy\nF36kpr6Rd249jTvPTNGSV4AWvbLAmKQwlt0zifOHRvHElxlMn7uGHF0np8P2F1cxfd4aHl+WwflD\nolh2zyTGJodZHUs5EC16ZYngHt48N30kf796BLsOlTP1n9/z6g/7aNLRfbs1NRle+3EfU/+xkl0F\n5Tx51Qieu24kwT10frz6T3qOXllGRLh8VByn9+3Ng0u388dPd/LJtoP89bJhDIrWi4cns6ugnAeX\nbmdzbilTBoTz6OXDiQrW+xRU63RRM+UQjDF8uCWfP3+6i9Jj9cyakMR/nd2PID8dnbZUUVPPs/+X\nySs/7CPY35vfXzSIy0bG6tx4N9XeRc10RK8cgohw2cg4pgyI4LEvdjNv5T6Wbj7IfVMHcOWoOLe/\nqNjUZFi8KY/Hl2VwpLKWa9Liuf+CgYQG+FgdTTkBHdErh7T1QCkPf5LO5txSBkX35HdTBzC5f7jb\njVyNMXy/9wh/+2I3OwvKGZkQwsO/GMKIeJ2Wqto/oteiVw6rqcnwybaDPLk8gwMlxzitTxj3ntPf\nbTbIWLevhKe/2sPq7GLiQv35zXkDuGREjNv/60b9mxa9chl1DU0sXLuf57/NoqiilnHJYdx1VgoT\nU3q73AjfGMOPmcU8t2Iva7JL6B3oy5wpfbluXAK+Xp5Wx1MORoteuZya+kbeWZfLS99lUVhey8Co\nIH55Rh8uHh6Nn7dzl2BNfSOfbStg3spsdh+qICLIl9mTmwve2T+b6jpa9Mpl1TY08tGWg8xfmc2e\nwkpCe3hzVVo8146Jp0+4c+2WtO9IFYvW5fLehgMcra6nf2QgvzyjD9NSY3QEr9qkRa9cnjGGVVnF\nvLVmP8t3FtLYZEiND+HyUbFcMDSa8CBfqyO2qqiilmU7CliyOZ/NuaV4egjnDY5kxrhEJqT0crnT\nUarrWF70IjIV+CfgCcw3xjx2oudq0St7HS6v4cMt+XywMZ+MwgpEYExiGOcNiWRy/3BSIgItK1Bj\nDJmHK/luTxHL0wtZv78EY2BAZBCXj4rl0pGxuimL6hBLi15EPIE9wLlAHrAemG6M2dna87XoVWcx\nxpBRWMEX2w+xbMchMgorAIgJ9uO0Pr1ISwpjdGIofcMD8PLsmhVAGhqbyCqqYlPuUdbvK2FNdjEH\ny2qA5nKfOjSKqUOjGBgVpKN3ZRerb5gaC2QaY7JtYRYB04BWi16pziIiDIzqycContx7bn/yS4/x\n/Z6i5q+9RSzZnA+Ar5cHA6N70j8ikD7hgST37kFUsD/RwX6EBfjg3cZ/BOobmyipquNQWQ0FZcfI\nKa4mu6iSPYWV7Coop7ahCYDegT6MSQrjrrPCmdS/N3GhPbr870Cpn+qqoo8FDrT4OQ8Y10XvpdQJ\nxYb4M31sAtPHJmCMIae4ms25R0k/WE76wTJWZBTx/sa8n72uh48nQX5e+Hh54O3hAdJc7nUNTVTU\nNFBd9/MNz3sH+tI3PIDrT0tkSExPRiaEktSrh47aleUsWwJBRG4DbgNISEiwKoZyIyJCcu8AknsH\ncPmofx8vr6knt7i6eXReXsPRqjrKj9VTUdPQXO6NTRjA19MDb08Pgvy86OnvTWiAD1E9/Yjq6UdC\nrx4E++u6PMoxdVXR5wPxLX6Osx37F2PMXGAuNJ+j76IcSrWpp583Q2ODGRobbHUUpbpEV61Hvx7o\nJyLJIuIDXAt83EXvpZRS6iS6ZERvjGkQkbuAL2meXvmqMSa9K95LKaXUyXXZOXpjzOfA5131+5VS\nSrWPbiWolFIuToteKaVcnBa9Ukq5OC16pZRycVr0Sinl4hximWIRKQL2W52jDb2BI1aH6CT6WRyX\nK30e/SxdL9EYE97Wkxyi6J2BiGxozypxzkA/i+Nypc+jn8Vx6KkbpZRycVr0Sinl4rTo22+u1QE6\nkX4Wx+VKn0c/i4PQc/RKKeXidESvlFIuTou+A0Tkv0XEiEhvq7N0lIg8ISK7RWSbiCwVkRCrM50q\nEZkqIhkikiki91udp6NEJF5EVojIThFJF5F7rM5kLxHxFJHNIvKp1VnsISIhIrLY9v8ru0RkvNWZ\nOkKL/hSJSDxwHpBrdRY7fQUMNcYMp3kj9wcsznNKbBvQPw9cAAwGpovIYGtTdVgD8N/GmMHAacAc\nJ/4sx90D7LI6RCf4J7DMGDMQGIGTfiYt+lP3NHAf4NQXN4wxy40xDbYf19C8C5gz+dcG9MaYOuD4\nBvROxxhTYIzZZPu+guYyibU2VceJSBxwETDf6iz2EJFgYBLwCoAxps4YU2ptqo7Roj8FIjINyDfG\nbLU6SyebBXxhdYhT1NoG9E5bjseJSBIwElhrbRK7/IPmwVCT1UHslAwUAa/ZTkPNF5EAq0N1hGWb\ngzsqEfkaiGrloYeAB2k+beMUTvZZjDEf2Z7zEM2nDt7uzmzq50QkEPgA+JUxptzqPB0hIhcDh40x\nG0XkTKvz2MkLGAXcbYxZKyL/BO4H/mBtrFOnRf8TxphzWjsuIsNo/i/8VhGB5lMdm0RkrDHmUDdG\nbLcTfZbjROQm4GLgbON882zb3IDemYiIN80l/7YxZonVeewwAbhERC4E/ICeIvKWMeZ6i3N1RB6Q\nZ4w5/q+rxTQXvdPRefQdJCI5QJoxxhEXOmqTiEwF/g5MNsYUWZ3nVImIF80Xkc+mueDXA9c5497E\n0jxyWACUGGN+ZXWezmIb0f/GGHOx1Vk6SkRWAr80xmSIyMNAgDHmtxbHOmU6ondfzwG+wFe2f6Gs\nMcbMtjZS+7nYBvQTgJnAdhHZYjv2oG3fZWWtu4G3RcQHyAZutjhPh+iIXimlXJzOulFKKRenRa+U\nUi5Oi14ppVycFr1SSrk4LXqllHJxWvRKKeXitOiVUsrFadErpZSL+380ZFJsxPi0WQAAAABJRU5E\nrkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1a2beaa5f28>"
+       "<matplotlib.figure.Figure at 0x1d167b00ef0>"
       ]
      },
      "metadata": {},
@@ -239,5 +245,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 1
 }
