--- a/DeepLearningStudy/ex_lab-09-1-xor.ipynb
+++ b/DeepLearningStudy/ex_lab-09-1-xor.ipynb
@@ -6,7 +6,7 @@
     "collapsed": true
    },
    "source": [
-    "# [ Lab 9-1 : XOR ]\n",
+    "# <span style=\"color:blue\">[</span> Lab 9-1 : XOR <span style=\"color:blue\">]</span>\n",
     "\n",
     "><p>출처: <a href=\"http://hunkim.github.io/ml/\" title=\"모두를 위한 머신러닝과 딥러닝의 강의\" target=\"blank\">모두를 위한 머신러닝과 딥러닝의 강의</a></p>"
    ]
@@ -61,7 +61,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Init. variables"
+    "# Setup"
    ]
   },
   {
@@ -72,7 +72,6 @@
    },
    "outputs": [],
    "source": [
-    "\n",
     "learning_rate = 0.1\n",
     "\n",
     "x_data = [[0, 0],\n",
@@ -90,7 +89,7 @@
     "Y = tf.placeholder(tf.float32, [None, 1])\n",
     "\n",
     "W = tf.Variable(tf.random_normal([2, 1]), name='weight')\n",
-    "b = tf.Variable(tf.random_normal([1]), name='bias')\n"
+    "b = tf.Variable(tf.random_normal([1]), name='bias')"
    ]
   },
   {
@@ -115,15 +114,14 @@
    "outputs": [],
    "source": [
     "### Hypothesis using sigmoid: tf.div(1., 1. + tf.exp(tf.matmul(X, W)))\n",
-    "hypothesis = tf.sigmoid(tf.matmul(X, W) + b)\n",
-    "\n"
+    "hypothesis = tf.sigmoid(tf.matmul(X, W) + b)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Cost/loss function"
+    "# Cost(loss) function"
    ]
   },
   {
@@ -151,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -160,8 +158,7 @@
     "# Accuracy computation\n",
     "# True if hypothesis>0.5 else False\n",
     "predicted = tf.cast(hypothesis > 0.5, dtype=tf.float32)\n",
-    "accuracy = tf.reduce_mean(tf.cast(tf.equal(predicted, Y), dtype=tf.float32))\n",
-    "\n"
+    "accuracy = tf.reduce_mean(tf.cast(tf.equal(predicted, Y), dtype=tf.float32))"
    ]
   },
   {
@@ -173,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -357,7 +354,41 @@
       "8700 0.693147 [[  1.22287702e-07]\n",
       " [  1.22145792e-07]]\n",
       "8800 0.693147 [[  1.22287702e-07]\n",
-      " [  1.22145792e-07]]\n"
+      " [  1.22145792e-07]]\n",
+      "8900 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "9000 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "9100 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "9200 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "9300 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "9400 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "9500 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "9600 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "9700 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "9800 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "9900 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "10000 0.693147 [[  1.22287702e-07]\n",
+      " [  1.22145792e-07]]\n",
+      "\n",
+      "Hypothesis:  [[ 0.5]\n",
+      " [ 0.5]\n",
+      " [ 0.5]\n",
+      " [ 0.5]] \n",
+      "Correct:  [[ 0.]\n",
+      " [ 0.]\n",
+      " [ 0.]\n",
+      " [ 0.]] \n",
+      "Accuracy:  0.5\n"
      ]
     }
    ],
@@ -377,7 +408,18 @@
     "    h, c, a = sess.run([hypothesis, predicted, accuracy],\n",
     "                       feed_dict={X: x_data, Y: y_data})\n",
     "    print(\"\\nHypothesis: \", h, \"\\nCorrect: \", c, \"\\nAccuracy: \", a)\n",
-    "    "
+    "    \n",
+    "    '''\n",
+    "    Hypothesis:  [[ 0.5]\n",
+    "     [ 0.5]\n",
+    "     [ 0.5]\n",
+    "     [ 0.5]] \n",
+    "    Correct:  [[ 0.]\n",
+    "     [ 0.]\n",
+    "     [ 0.]\n",
+    "     [ 0.]] \n",
+    "    Accuracy:  0.5\n",
+    "    '''"
    ]
   }
  ],
