--- a/DeepLearningStudy/ex_lab-09-4-xor_tensorboard.ipynb
+++ b/DeepLearningStudy/ex_lab-09-4-xor_tensorboard.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [ Lab 9-4 : XOR_TensorBoard ]\n",
+    "# <span style=\"color:blue\">[</span> Lab 9-4 : XOR_TensorBoard <span style=\"color:blue\">]</span>\n",
     "\n",
     "><p>출처: <a href=\"http://hunkim.github.io/ml/\" title=\"모두를 위한 머신러닝과 딥러닝의 강의\" target=\"blank\">모두를 위한 머신러닝과 딥러닝의 강의</a></p>"
    ]
@@ -34,9 +34,8 @@
     "import tensorflow as tf\n",
     "import numpy as np\n",
     "\n",
-    "\n",
     "print('tensorflow version: {0}'.format(tf.__version__))\n",
-    "print('numpy version: {0}'.format(np.__version__))\n"
+    "print('numpy version: {0}'.format(np.__version__))"
    ]
   },
   {
@@ -54,7 +53,7 @@
    },
    "outputs": [],
    "source": [
-    "tf.set_random_seed(777)  # for reproducibility\n"
+    "tf.set_random_seed(777)  # for reproducibility"
    ]
   },
   {
@@ -86,8 +85,7 @@
     "y_data = np.array(y_data, dtype=np.float32)\n",
     "\n",
     "X = tf.placeholder(tf.float32, [None, 2], name='x-input')\n",
-    "Y = tf.placeholder(tf.float32, [None, 1], name='y-input')\n",
-    "\n"
+    "Y = tf.placeholder(tf.float32, [None, 1], name='y-input')"
    ]
   },
   {
@@ -112,9 +110,7 @@
     "\n",
     "    w1_hist = tf.summary.histogram(\"weights1\", W1)\n",
     "    b1_hist = tf.summary.histogram(\"biases1\", b1)\n",
-    "    layer1_hist = tf.summary.histogram(\"layer1\", layer1)\n",
-    "\n",
-    "\n"
+    "    layer1_hist = tf.summary.histogram(\"layer1\", layer1)"
    ]
   },
   {
@@ -139,8 +135,7 @@
     "\n",
     "    w2_hist = tf.summary.histogram(\"weights2\", W2)\n",
     "    b2_hist = tf.summary.histogram(\"biases2\", b2)\n",
-    "    hypothesis_hist = tf.summary.histogram(\"hypothesis\", hypothesis)\n",
-    "\n"
+    "    hypothesis_hist = tf.summary.histogram(\"hypothesis\", hypothesis)"
    ]
   },
   {
@@ -162,8 +157,7 @@
     "with tf.name_scope(\"cost\") as scope:\n",
     "    cost = -tf.reduce_mean(Y * tf.log(hypothesis) + (1 - Y) *\n",
     "                           tf.log(1 - hypothesis))\n",
-    "    cost_summ = tf.summary.scalar(\"cost\", cost)\n",
-    "\n"
+    "    cost_summ = tf.summary.scalar(\"cost\", cost)"
    ]
   },
   {
@@ -182,8 +176,7 @@
    "outputs": [],
    "source": [
     "with tf.name_scope(\"train\") as scope:\n",
-    "    train = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(cost)\n",
-    "\n"
+    "    train = tf.train.AdamOptimizer(learning_rate=learning_rate).minimize(cost)"
    ]
   },
   {
@@ -206,8 +199,7 @@
     "# True if hypothesis>0.5 else False\n",
     "predicted = tf.cast(hypothesis > 0.5, dtype=tf.float32)\n",
     "accuracy = tf.reduce_mean(tf.cast(tf.equal(predicted, Y), dtype=tf.float32))\n",
-    "accuracy_summ = tf.summary.scalar(\"accuracy\", accuracy)\n",
-    "\n"
+    "accuracy_summ = tf.summary.scalar(\"accuracy\", accuracy)"
    ]
   },
   {
