--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [ ex_lab-09-7-sigmoid_back_prop ]\n",
+    "# <span style=\"color:blue\">[</span> ex_lab-09-7-sigmoid_back_prop <span style=\"color:blue\">]</span>\n",
     " \n",
     "><p>출처: <a href=\"http://hunkim.github.io/ml/\" title=\"모두를 위한 머신러닝과 딥러닝의 강의\" target=\"blank\">모두를 위한 머신러닝과 딥러닝의 강의</a></p>\n"
    ]
@@ -21,13 +21,13 @@
     "### [References]\n",
     " \n",
     "><p>참고: <br/>\n",
-    "> 1.  <a href=\"https://www.tensorflow.org/api_docs/python/tf/nn/sigmoid_cross_entropy_with_logits\" title=\"Tensorflow Document\" target=\"_blank\">Tensorflow Document</a> <br/>\n",
+    "> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;1.  <a href=\"https://www.tensorflow.org/api_docs/python/tf/nn/sigmoid_cross_entropy_with_logits\" title=\"Tensorflow Document\" target=\"_blank\">Tensorflow Document</a> <br/>\n",
     "\n",
-    "> 2.  <a href=\"https://docs.google.com/presentation/d/1_ZmtfEjLmhbuM_PqbDYMXXLAqeWN0HwuhcSKnUQZ6MM/edit#slide=id.g1ec1d04b5a_1_83\" title=\"Neural Net Backprop in one slide! by Sung Kim\" target=\"_blank\">Neural Net Backprop in one slide! by Sung Kim</a> <br/>\n",
+    "> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;2.  <a href=\"https://docs.google.com/presentation/d/1_ZmtfEjLmhbuM_PqbDYMXXLAqeWN0HwuhcSKnUQZ6MM/edit#slide=id.g1ec1d04b5a_1_83\" title=\"Neural Net Backprop in one slide! by Sung Kim\" target=\"_blank\">Neural Net Backprop in one slide! by Sung Kim</a> <br/>\n",
     "  \n",
-    "> 3.  <a href=\"http://blog.aloni.org/posts/backprop-with-tensorflow/\" title=\"Back Propagation with Tensorflow by Dan Aloni\" target=\"_blank\">Back Propagation with Tensorflow by Dan Aloni</a> <br/>\n",
+    "> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;3.  <a href=\"http://blog.aloni.org/posts/backprop-with-tensorflow/\" title=\"Back Propagation with Tensorflow by Dan Aloni\" target=\"_blank\">Back Propagation with Tensorflow by Dan Aloni</a> <br/>\n",
     "\n",
-    "> 4.   <a href=\"https://medium.com/@karpathy/yes-you-should-understand-backprop-e2f06eab496b#.cockptkn7\" title=\"Yes you should understand backprop by Andrej Karpathy\" target=\"_blank\">Yes you should understand backprop by Andrej Karpathy</a>\n",
+    "> &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;4.   <a href=\"https://medium.com/@karpathy/yes-you-should-understand-backprop-e2f06eab496b#.cockptkn7\" title=\"Yes you should understand backprop by Andrej Karpathy\" target=\"_blank\">Yes you should understand backprop by Andrej Karpathy</a>\n",
     "</p>\n",
     "\n",
     "### [Network Architecture]\n",
@@ -47,20 +47,24 @@
     "\\begin{aligned}\n",
     "Loss &= tf.reduce\\_sum(Loss\\_i)     \n",
     "\\end{aligned}\n",
-    "       \n",
-    " \n",
-    " We want to compute that  \n",
+    "<br/>\n",
+    "     where σ() is\n",
+    "     > \\begin{aligned}\n",
+    "\\sigma(x) = \\frac{1}{(1 + e^{-x})}\n",
+    "\\end{aligned}\n",
+    "<br/>\n",
+    "We want to compute that  \n",
     " >\\begin{aligned}\n",
     "  \\frac{dLoss}{dW} &= ??? \\\\\n",
     "  \\frac{dLoss}{db} &= ??? \\\\\n",
     " \\end{aligned}  \n",
     " \n",
-    " please read \"Neural Net Backprop in one slide!\" for deriving formulas\n"
+    "please read \"[Neural Net Backprop in one slide!](https://docs.google.com/presentation/d/1_ZmtfEjLmhbuM_PqbDYMXXLAqeWN0HwuhcSKnUQZ6MM/edit#slide=id.g1ec1d04b5a_1_83)\" for deriving formulas\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +87,7 @@
     "import numpy as np\n",
     "\n",
     "print('tensorflow version: {0}'.format(tf.__version__))\n",
-    "print('numpy version: {0}'.format(np.__version__))\n"
+    "print('numpy version: {0}'.format(np.__version__))"
    ]
   },
   {
@@ -95,13 +99,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 17,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
-    "tf.set_random_seed(777)  # for reproducibility\n"
+    "tf.set_random_seed(777)  # for reproducibility"
    ]
   },
   {
@@ -113,7 +117,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 18,
    "metadata": {
     "collapsed": true
    },
@@ -123,7 +127,7 @@
     "xy = np.loadtxt('./data_file/data-04-zoo.csv', delimiter=',', dtype=np.float32)\n",
     "X_data = xy[:, 0:-1]\n",
     "N = X_data.shape[0]\n",
-    "y_data = xy[:, [-1]]\n"
+    "y_data = xy[:, [-1]]"
    ]
   },
   {
@@ -135,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -150,7 +154,7 @@
    "source": [
     "# y_data has labels from 0 ~ 6\n",
     "print(\"y has one of the following values\")\n",
-    "print(np.unique(y_data))\n"
+    "print(np.unique(y_data))"
    ]
   },
   {
@@ -164,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -180,7 +184,7 @@
     "# X_data.shape = (101, 16) => 101 samples, 16 features\n",
     "# y_data.shape = (101, 1)  => 101 samples, 1 label\n",
     "print(\"Shape of X data: \", X_data.shape)\n",
-    "print(\"Shape of y data: \", y_data.shape)\n"
+    "print(\"Shape of y data: \", y_data.shape)"
    ]
   },
   {
@@ -192,7 +196,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 21,
    "metadata": {
     "collapsed": true
    },
@@ -208,7 +212,7 @@
     "target = tf.cast(target, tf.float32)\n",
     "\n",
     "W = tf.Variable(tf.random_normal([16, nb_classes]), name='weight')\n",
-    "b = tf.Variable(tf.random_normal([nb_classes]), name='bias')\n"
+    "b = tf.Variable(tf.random_normal([nb_classes]), name='bias')"
    ]
   },
   {
@@ -224,7 +228,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 22,
    "metadata": {
     "collapsed": true
    },
@@ -233,7 +237,7 @@
     "def sigma(x):\n",
     "    # sigmoid function\n",
     "    # σ(x) = 1 / (1 + exp(-x))\n",
-    "    return 1. / (1. + tf.exp(-x))\n"
+    "    return 1. / (1. + tf.exp(-x))"
    ]
   },
   {
@@ -249,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 23,
    "metadata": {
     "collapsed": true
    },
@@ -258,7 +262,7 @@
     "def sigma_prime(x):\n",
     "    # derivative of the sigmoid function\n",
     "    # σ'(x) = σ(x) * (1 - σ(x))\n",
-    "    return sigma(x) * (1. - sigma(x))\n"
+    "    return sigma(x) * (1. - sigma(x))"
    ]
   },
   {
@@ -270,7 +274,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 24,
    "metadata": {
     "collapsed": true
    },
@@ -278,7 +282,7 @@
    "source": [
     "# Forward propagation\n",
     "layer_1 = tf.matmul(X, W) + b\n",
-    "y_pred = sigma(layer_1)\n"
+    "y_pred = sigma(layer_1)"
    ]
   },
   {
@@ -290,7 +294,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 25,
    "metadata": {
     "collapsed": true
    },
@@ -298,8 +302,7 @@
    "source": [
     "# Loss Function (end of forwad propagation)\n",
     "loss_i = - target * tf.log(y_pred) - (1. - target) * tf.log(1. - y_pred)\n",
-    "loss = tf.reduce_sum(loss_i)\n",
-    "\n"
+    "loss = tf.reduce_sum(loss_i)"
    ]
   },
   {
@@ -311,16 +314,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 26,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
    "source": [
     "# Dimension Check\n",
-    "assert y_pred.shape.as_list() == target.shape.as_list()\n",
-    "\n",
-    "\n"
+    "assert y_pred.shape.as_list() == target.shape.as_list()"
    ]
   },
   {
@@ -334,7 +335,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 27,
    "metadata": {
     "collapsed": true
    },
@@ -346,8 +347,7 @@
     "d_sigma = sigma_prime(layer_1)\n",
     "d_layer = d_loss * d_sigma\n",
     "d_b = d_layer\n",
-    "d_W = tf.matmul(tf.transpose(X), d_layer)\n",
-    "\n"
+    "d_W = tf.matmul(tf.transpose(X), d_layer)"
    ]
   },
   {
@@ -359,7 +359,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 28,
    "metadata": {
     "collapsed": true
    },
@@ -370,8 +370,7 @@
     "train_step = [\n",
     "    tf.assign(W, W - learning_rate * d_W),\n",
     "    tf.assign(b, b - learning_rate * tf.reduce_sum(d_b)),\n",
-    "]\n",
-    "\n"
+    "]"
    ]
   },
   {
@@ -383,7 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 29,
    "metadata": {
     "collapsed": true
    },
@@ -392,7 +391,7 @@
     "# Prediction and Accuracy\n",
     "prediction = tf.argmax(y_pred, 1)\n",
     "acct_mat = tf.equal(tf.argmax(y_pred, 1), tf.argmax(target, 1))\n",
-    "acct_res = tf.reduce_mean(tf.cast(acct_mat, tf.float32))\n"
+    "acct_res = tf.reduce_mean(tf.cast(acct_mat, tf.float32))"
    ]
   },
   {
@@ -404,63 +403,63 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Step:     0\t Loss:  453.74802\t Acc: 38.61%\n",
-      "Step:    10\t Loss:  135.79250\t Acc: 83.17%\n",
-      "Step:    20\t Loss:   95.05664\t Acc: 88.12%\n",
-      "Step:    30\t Loss:   77.29308\t Acc: 91.09%\n",
-      "Step:    40\t Loss:   66.43569\t Acc: 93.07%\n",
-      "Step:    50\t Loss:   58.81989\t Acc: 94.06%\n",
-      "Step:    60\t Loss:   53.09288\t Acc: 94.06%\n",
-      "Step:    70\t Loss:   48.58739\t Acc: 96.04%\n",
-      "Step:    80\t Loss:   44.92377\t Acc: 96.04%\n",
-      "Step:    90\t Loss:   41.86682\t Acc: 97.03%\n",
-      "Step:   100\t Loss:   39.26264\t Acc: 97.03%\n",
-      "Step:   110\t Loss:   37.00650\t Acc: 97.03%\n",
-      "Step:   120\t Loss:   35.02472\t Acc: 97.03%\n",
-      "Step:   130\t Loss:   33.26402\t Acc: 97.03%\n",
-      "Step:   140\t Loss:   31.68490\t Acc: 97.03%\n",
-      "Step:   150\t Loss:   30.25749\t Acc: 97.03%\n",
-      "Step:   160\t Loss:   28.95874\t Acc: 97.03%\n",
-      "Step:   170\t Loss:   27.77063\t Acc: 97.03%\n",
-      "Step:   180\t Loss:   26.67879\t Acc: 97.03%\n",
-      "Step:   190\t Loss:   25.67166\t Acc: 97.03%\n",
-      "Step:   200\t Loss:   24.73972\t Acc: 98.02%\n",
-      "Step:   210\t Loss:   23.87506\t Acc: 98.02%\n",
-      "Step:   220\t Loss:   23.07096\t Acc: 98.02%\n",
-      "Step:   230\t Loss:   22.32165\t Acc: 98.02%\n",
-      "Step:   240\t Loss:   21.62208\t Acc: 100.00%\n",
-      "Step:   250\t Loss:   20.96780\t Acc: 100.00%\n",
-      "Step:   260\t Loss:   20.35483\t Acc: 100.00%\n",
-      "Step:   270\t Loss:   19.77959\t Acc: 100.00%\n",
-      "Step:   280\t Loss:   19.23886\t Acc: 100.00%\n",
-      "Step:   290\t Loss:   18.72972\t Acc: 100.00%\n",
-      "Step:   300\t Loss:   18.24953\t Acc: 100.00%\n",
-      "Step:   310\t Loss:   17.79592\t Acc: 100.00%\n",
-      "Step:   320\t Loss:   17.36671\t Acc: 100.00%\n",
-      "Step:   330\t Loss:   16.95997\t Acc: 100.00%\n",
-      "Step:   340\t Loss:   16.57392\t Acc: 100.00%\n",
-      "Step:   350\t Loss:   16.20697\t Acc: 100.00%\n",
-      "Step:   360\t Loss:   15.85770\t Acc: 100.00%\n",
-      "Step:   370\t Loss:   15.52480\t Acc: 100.00%\n",
-      "Step:   380\t Loss:   15.20708\t Acc: 100.00%\n",
-      "Step:   390\t Loss:   14.90350\t Acc: 100.00%\n",
-      "Step:   400\t Loss:   14.61307\t Acc: 100.00%\n",
-      "Step:   410\t Loss:   14.33491\t Acc: 100.00%\n",
-      "Step:   420\t Loss:   14.06823\t Acc: 100.00%\n",
-      "Step:   430\t Loss:   13.81229\t Acc: 100.00%\n",
-      "Step:   440\t Loss:   13.56642\t Acc: 100.00%\n",
-      "Step:   450\t Loss:   13.33002\t Acc: 100.00%\n",
-      "Step:   460\t Loss:   13.10250\t Acc: 100.00%\n",
-      "Step:   470\t Loss:   12.88337\t Acc: 100.00%\n",
-      "Step:   480\t Loss:   12.67214\t Acc: 100.00%\n",
-      "Step:   490\t Loss:   12.46837\t Acc: 100.00%\n",
+      "Step:     0\t Loss:  622.77112\t Acc: 37.62%\n",
+      "Step:    10\t Loss:  134.19913\t Acc: 80.20%\n",
+      "Step:    20\t Loss:   84.24377\t Acc: 91.09%\n",
+      "Step:    30\t Loss:   66.77851\t Acc: 92.08%\n",
+      "Step:    40\t Loss:   57.17104\t Acc: 93.07%\n",
+      "Step:    50\t Loss:   50.46732\t Acc: 95.05%\n",
+      "Step:    60\t Loss:   45.43509\t Acc: 95.05%\n",
+      "Step:    70\t Loss:   41.49650\t Acc: 95.05%\n",
+      "Step:    80\t Loss:   38.31973\t Acc: 95.05%\n",
+      "Step:    90\t Loss:   35.69547\t Acc: 97.03%\n",
+      "Step:   100\t Loss:   33.48457\t Acc: 97.03%\n",
+      "Step:   110\t Loss:   31.59103\t Acc: 98.02%\n",
+      "Step:   120\t Loss:   29.94665\t Acc: 100.00%\n",
+      "Step:   130\t Loss:   28.50175\t Acc: 100.00%\n",
+      "Step:   140\t Loss:   27.21925\t Acc: 100.00%\n",
+      "Step:   150\t Loss:   26.07095\t Acc: 100.00%\n",
+      "Step:   160\t Loss:   25.03497\t Acc: 100.00%\n",
+      "Step:   170\t Loss:   24.09410\t Acc: 100.00%\n",
+      "Step:   180\t Loss:   23.23459\t Acc: 100.00%\n",
+      "Step:   190\t Loss:   22.44529\t Acc: 100.00%\n",
+      "Step:   200\t Loss:   21.71711\t Acc: 100.00%\n",
+      "Step:   210\t Loss:   21.04250\t Acc: 100.00%\n",
+      "Step:   220\t Loss:   20.41518\t Acc: 100.00%\n",
+      "Step:   230\t Loss:   19.82984\t Acc: 100.00%\n",
+      "Step:   240\t Loss:   19.28199\t Acc: 100.00%\n",
+      "Step:   250\t Loss:   18.76780\t Acc: 100.00%\n",
+      "Step:   260\t Loss:   18.28395\t Acc: 100.00%\n",
+      "Step:   270\t Loss:   17.82759\t Acc: 100.00%\n",
+      "Step:   280\t Loss:   17.39622\t Acc: 100.00%\n",
+      "Step:   290\t Loss:   16.98766\t Acc: 100.00%\n",
+      "Step:   300\t Loss:   16.59999\t Acc: 100.00%\n",
+      "Step:   310\t Loss:   16.23152\t Acc: 100.00%\n",
+      "Step:   320\t Loss:   15.88073\t Acc: 100.00%\n",
+      "Step:   330\t Loss:   15.54629\t Acc: 100.00%\n",
+      "Step:   340\t Loss:   15.22700\t Acc: 100.00%\n",
+      "Step:   350\t Loss:   14.92177\t Acc: 100.00%\n",
+      "Step:   360\t Loss:   14.62963\t Acc: 100.00%\n",
+      "Step:   370\t Loss:   14.34970\t Acc: 100.00%\n",
+      "Step:   380\t Loss:   14.08119\t Acc: 100.00%\n",
+      "Step:   390\t Loss:   13.82336\t Acc: 100.00%\n",
+      "Step:   400\t Loss:   13.57556\t Acc: 100.00%\n",
+      "Step:   410\t Loss:   13.33718\t Acc: 100.00%\n",
+      "Step:   420\t Loss:   13.10766\t Acc: 100.00%\n",
+      "Step:   430\t Loss:   12.88649\t Acc: 100.00%\n",
+      "Step:   440\t Loss:   12.67321\t Acc: 100.00%\n",
+      "Step:   450\t Loss:   12.46738\t Acc: 100.00%\n",
+      "Step:   460\t Loss:   12.26859\t Acc: 100.00%\n",
+      "Step:   470\t Loss:   12.07648\t Acc: 100.00%\n",
+      "Step:   480\t Loss:   11.89070\t Acc: 100.00%\n",
+      "Step:   490\t Loss:   11.71094\t Acc: 100.00%\n",
       "[True]\t Prediction: 0\t True y: 0\n",
       "[True]\t Prediction: 0\t True y: 0\n",
       "[True]\t Prediction: 3\t True y: 3\n",
@@ -570,7 +569,7 @@
        "'\\nOutput Example\\n\\nStep:     0      Loss:  453.74799        Acc: 38.61%\\nStep:    20      Loss:   95.05664        Acc: 88.12%\\nStep:    40      Loss:   66.43570        Acc: 93.07%\\nStep:    60      Loss:   53.09288        Acc: 94.06%\\n...\\nStep:   290      Loss:   18.72972        Acc: 100.00%\\nStep:   300      Loss:   18.24953        Acc: 100.00%\\nStep:   310      Loss:   17.79592        Acc: 100.00%\\n...\\n[True]   Prediction: 0   True y: 0\\n[True]   Prediction: 0   True y: 0\\n[True]   Prediction: 3   True y: 3\\n[True]   Prediction: 0   True y: 0\\n...\\n'"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -613,7 +612,7 @@
     "[True]   Prediction: 3   True y: 3\n",
     "[True]   Prediction: 0   True y: 0\n",
     "...\n",
-    "\"\"\"\n"
+    "\"\"\""
    ]
   }
  ],
