--- a/DeepLearningStudy/ex_lab-09-5-linear_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-5-linear_back_prop.ipynb
@@ -10,9 +10,9 @@
     "\n",
     " \n",
     ">참고: <br/>\n",
-    "> $\\qquad$ 1. [Back propagation with TensorFlow - Dan Aloni's blog](http://blog.aloni.org/posts/backprop-with-tensorflow/ \"Back propagation with TensorFlow - Dan Aloni's blog\")\n",
+    "> &nbsp;&nbsp;&nbsp; 1. [Back propagation with TensorFlow - Dan Aloni's blog](http://blog.aloni.org/posts/backprop-with-tensorflow/ \"Back propagation with TensorFlow - Dan Aloni's blog\")\n",
     "<br/>\n",
-    "$\\qquad$ 2. [Yes you should understand backprop - Andrej Karpathy](https://medium.com/@karpathy/yes-you-should-understand-backprop-e2f06eab496b#.b3rvzhx89 \"Yes you should understand backprop - Andrej Karpathy\")\n"
+    "&nbsp;&nbsp;&nbsp; 2. [Yes you should understand backprop - Andrej Karpathy](https://medium.com/@karpathy/yes-you-should-understand-backprop-e2f06eab496b#.b3rvzhx89 \"Yes you should understand backprop - Andrej Karpathy\")\n"
    ]
   },
   {
