--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -55,7 +55,7 @@
     "<br/>\n",
     "We want to compute that  \n",
     " >\\begin{aligned}\n",
-    "  \\frac{dLoss}{dW} &= ??? \\\\\n",
+    "  \\frac{dLoss}{dW} &= ??? \n",
     "  \\frac{dLoss}{db} &= ??? \\\\\n",
     " \\end{aligned}  \n",
     " \n",
