--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -56,6 +56,8 @@
     "We want to compute that  \n",
     " >\\begin{aligned}\n",
     "  \\frac{dLoss}{dW} &= ??? \n",
+    " \\end{aligned}  \n",
+    " >\\begin{aligned}\n",
     "  \\frac{dLoss}{db} &= ??? \\\\\n",
     " \\end{aligned}  \n",
     " \n",
