--- a/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
+++ b/DeepLearningStudy/ex_lab-09-7-sigmoid_back_prop.ipynb
@@ -54,10 +54,10 @@
     "\\end{aligned}\n",
     "<br/>\n",
     "We want to compute that  \n",
-    " >\\begin{aligned}\n",
-    "  \\frac{dLoss}{dW} &= ???  \\\\\n",
-    "  \\frac{dLoss}{db} &= ??? \\\\\n",
-    " \\end{aligned}  \n",
+    " >\\begin{equation}\n",
+    "  \\frac{dLoss}{dW} &= ??? \n",
+    "  \\frac{dLoss}{db} &= ??? \n",
+    " \\end{equation}  \n",
     " \n",
     "please read \"[Neural Net Backprop in one slide!](https://docs.google.com/presentation/d/1_ZmtfEjLmhbuM_PqbDYMXXLAqeWN0HwuhcSKnUQZ6MM/edit#slide=id.g1ec1d04b5a_1_83)\" for deriving formulas\n"
    ]
