--- a/DeepLearningStudy/ex_lab-08-tensor_manipulation.ipynb
+++ b/DeepLearningStudy/ex_lab-08-tensor_manipulation.ipynb
@@ -9,7 +9,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 168,
+   "execution_count": null,
    "metadata": {
     "collapsed": true
    },
@@ -370,7 +370,7 @@
     "print('matrix1 : \\n {0}'.format(matrix1.eval()))\n",
     "print('matrix2 : \\n {0}'.format(matrix2.eval()))\n",
     "print('matrix1+matrix2 : \\n {0}'.format((matrix1+matrix2).eval()))\n",
-    "(matrix1+matrix2).eval()\n"
+    "(matrix1+matrix2).eval()"
    ]
   },
   {
@@ -995,7 +995,7 @@
     "\n",
     "# pp.pprint(tt_one_hot)\n",
     "print('tt_one_hot : \\n {0}'.format(tt_one_hot))\n",
-    "print('tt_one_hot_shape : \\n {0}'.format(tt_one_hot.shape))\n"
+    "print('tt_one_hot_shape : \\n {0}'.format(tt_one_hot.shape))"
    ]
   },
   {
@@ -1583,7 +1583,9 @@
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    ""
+   ]
   }
  ],
  "metadata": {
@@ -1595,7 +1597,7 @@
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 3
+    "version": 3.0
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
@@ -1606,5 +1608,5 @@
   }
  },
  "nbformat": 4,
- "nbformat_minor": 1
+ "nbformat_minor": 0
 }
