--- a/DeepLearningStudy/lab-08-tensor_manipulation.ipynb
+++ b/DeepLearningStudy/lab-08-tensor_manipulation.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# [ lab-08-tensor_manipulation ]\n",
+    "# <span style=\"color:blue\">[</span> lab-08-tensor_manipulation <span style=\"color:blue\">]</span>\n",
     "\n",
     "> [Tensorflow Document(Tensor Transformations)](https://www.tensorflow.org/api_guides/python/array_ops) "
    ]
@@ -41,8 +41,7 @@
    },
    "outputs": [],
    "source": [
-    "\n",
-    "tf.set_random_seed(777)  # for reproducibility\n"
+    "tf.set_random_seed(777)  # for reproducibility"
    ]
   },
   {
