--- a/DeepLearningStudy/ex_lab-10-4-mnist_nn_deep.ipynb
+++ b/DeepLearningStudy/ex_lab-10-4-mnist_nn_deep.ipynb
@@ -11,6 +11,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Import Module"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {
@@ -22,9 +29,8 @@
     "import tensorflow as tf\n",
     "import random\n",
     "import matplotlib.pyplot as plt\n",
-    "from tensorflow.examples.tutorials.mnist import input_data\n",
     "\n",
-    "tf.set_random_seed(777)  # reproducibility"
+    "from tensorflow.examples.tutorials.mnist import input_data\n"
    ]
   },
   {
@@ -45,7 +51,9 @@
     "# parameters\n",
     "learning_rate = 0.001\n",
     "training_epochs = 15\n",
-    "batch_size = 100"
+    "batch_size = 100\n",
+    "\n",
+    "tf.set_random_seed(777)  # reproducibility"
    ]
   },
   {
@@ -77,6 +85,7 @@
    ],
    "source": [
     "mnist = input_data.read_data_sets(\"MNIST_data/\", one_hot=True)\n",
+    "\n",
     "# Check out https://www.tensorflow.org/get_started/mnist/beginners for\n",
     "# more information about the mnist dataset"
    ]
