--- a/DeepLearningStudy/ex_lab-11-5-mnist_cnn_ensemble_layers.ipynb
+++ b/DeepLearningStudy/ex_lab-11-5-mnist_cnn_ensemble_layers.ipynb
@@ -319,12 +319,14 @@
     "\n",
     "print('Ensemble accuracy:', sess.run(ensemble_accuracy))\n",
     "\n",
-    "# Get one and predict\n",
-    "r = random.randint(0, mnist.test.num_examples - 1)\n",
-    "\n",
-    "# show image\n",
-    "plt.imshow(mnist.test.images[r:r + 1].reshape(28, 28), cmap='Greys', interpolation='nearest')\n",
-    "plt.show()\n",
+    "# # Get one and predict\n",
+    "# r = random.randint(0, mnist.test.num_examples - 1)\n",
+    "# print(\"Label: \", sess.run(tf.argmax(mnist.test.labels[r:r + 1], 1)))\n",
+    "# print(\"Prediction: \", tf.argmax(m1.predict(mnist.test.images[r:r + 1]),1))\n",
+    "      \n",
+    "# # show image\n",
+    "# plt.imshow(mnist.test.images[r:r + 1].reshape(28, 28), cmap='Greys', interpolation='nearest')\n",
+    "# plt.show()\n",
     "\n",
     "\n",
     "'''\n",
